# eo-pipelines

./: LICENSE  MANIFEST.in  README.md  eo_pipelines_env.yml  setup.cfg
environments/: sync.sh
environments/cartopy/: MANIFEST.in  README.md  cartopy_env.yml  setup.cfg
environments/pyproj/: README.md  pyproj_env.yml  setup.cfg
environments/rioxarray/: README.md  setup.cfg
environments/xesmf/: README.md  setup.cfg  xesmf_env.yml
example_pipelines/: denhaag_pipeline.yaml  example_greenland.yaml  greenland1.yaml  greenland2.yaml  greenland3.yaml  greenland4.yaml  greenland5.yaml  greenland6.yaml  greenland7.yaml  greenland9.yaml  helheimglacier_pipeline.yaml  heronisland_eco_pipeline.yaml  lake_ice_template.yaml  leverett.yaml  london_pipeline.yaml  pineislandglacier_pipeline.yaml  short_pipeline.yaml  test_pipeline.yaml  windermere_pipeline.yaml
example_pipelines/fmask_london/: london.yaml
example_pipelines/leverett/: leverett_box.nc
example_pipelines/london/: london.yaml
example_pipelines/swains/: create_box.sh  job.sh  swains.yaml
example_pipelines/whitsundays/: create_box.sh  job.sh  whitsundays.yaml
example_pipelines/whitsundays0/: create_box.sh  whitsundays0.yaml
scripts/: job.sh  sync.sh
src/cartopy_utils/: add_spatial.py  geojson2kml.py  jointplot.py  scan_geojson_features.py
src/eo_pipeline_stages/: adjust.py  adjust.sh  adjust_tool.py  configuration.py  elevation.py  fetch.py  fetch_download.sh  fetch_list.sh  group.py  group.sh  regrid.py  schema.json  slider_tool.py  slider_tool.sh  time_stacker.py  time_stacker.sh
src/eo_pipelines/: __init__.py  pipeline_exceptions.py  pipeline_spec.py  pipeline_stage.py  pipeline_stage_utils.py  pipeline_utils.py
src/pyproj_utils/: assemble.py  convert_coordinates.py  create_latlon_grid.py  grouper.py  interpolate.py  make_latlon_2d.py  time_slice.py  time_stacker.py
(+178 files in other folders)
