[metadata]
name = eo_pipeline_stages
version = attr: eo_pipeline_stages.VERSION
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Stages for processing EO data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/eo-pipeline-stages
project_urls =
    Bug Tracker = https://github.com/surftemp/eo-pipeline-stages/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src