[metadata]
name = eo_pipelines
version = attr: eo_pipelines.VERSION
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Stages for processing EO data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/eo-pipelines
project_urls =
    Bug Tracker = https://github.com/surftemp/eo-pipelines/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    run_pipeline = eo_pipelines.cli.run_pipeline:main
    run_pipelines = eo_pipelines.cli.run_pipelines:main
    query_tracking_database = eo_pipelines.cli.query_tracking_database:main
    create_pipelines = eo_pipelines.cli.create_pipelines:main
    manage_pipelines = eo_pipelines.cli.manage_pipelines:main

[options.packages.find]
where = src

[tool.setuptools.package-data]
"*" = ["*.json"]
